// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BurgerIcon component should render with all props given 1`] = `
.c2 {
  display: block;
  position: absolute;
  width: calc(2.4rem * 1.33);
  height: calc(2.4rem * 0.2);
  background: pink;
  border-radius: calc(2.4rem * 0.2);
  opacity: 1;
  left: 0;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: 0.25s ease-in-out;
  transition: 0.25s ease-in-out;
}

.c2:nth-child(1) {
  top: 0;
}

.c2:nth-child(2) {
  top: calc(2.4rem * 0.4);
}

.c2:nth-child(3) {
  top: calc(2.4rem * 0.8);
}

.c0 {
  border: none;
  background-color: transparent;
  outline: none;
  width: calc(2.4rem * 1.33);
  height: 2.4rem;
  position: relative;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  cursor: pointer;
}

.c0 .c1:nth-child(1) {
  top: calc(2.4rem * 0.4);
  -webkit-transform: rotate(135deg);
  -ms-transform: rotate(135deg);
  transform: rotate(135deg);
}

.c0 .c1:nth-child(2) {
  opacity: 0;
  left: -60px;
}

.c0 .c1:nth-child(3) {
  top: calc(2.4rem * 0.4);
  -webkit-transform: rotate(-135deg);
  -ms-transform: rotate(-135deg);
  transform: rotate(-135deg);
}

<div>
  <button
    class="c0"
    color="pink"
    id="burgerIcon"
    open=""
  >
    <span
      class="c1 c2"
      color="pink"
    />
    <span
      class="c1 c2"
      color="pink"
    />
    <span
      class="c1 c2"
      color="pink"
    />
  </button>
</div>
`;

exports[`BurgerIcon component should render with default props 1`] = `
.c1 {
  display: block;
  position: absolute;
  width: calc(3.2rem * 1.33);
  height: calc(3.2rem * 0.2);
  background: #607890;
  border-radius: calc(3.2rem * 0.2);
  opacity: 1;
  left: 0;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: 0.25s ease-in-out;
  transition: 0.25s ease-in-out;
}

.c1:nth-child(1) {
  top: 0;
}

.c1:nth-child(2) {
  top: calc(3.2rem * 0.4);
}

.c1:nth-child(3) {
  top: calc(3.2rem * 0.8);
}

.c0 {
  border: none;
  background-color: transparent;
  outline: none;
  width: calc(3.2rem * 1.33);
  height: 3.2rem;
  position: relative;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  cursor: pointer;
}

<div>
  <button
    class="c0"
    id="burgerIcon"
  >
    <span
      class="c1"
    />
    <span
      class="c1"
    />
    <span
      class="c1"
    />
  </button>
</div>
`;
